--- a/developer.html
+++ b/developer.html
@@ -2,8 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
- <title>⚠️ ACCESS GRANTED | MOON DEV</title>
-
+  <title>المطوّر الأعلى | MOON</title>
 
   <!-- عرض ثابت بحال PC -->
   <meta name="viewport" content="width=1200">
@@ -60,7 +59,7 @@ body{
 /* ===== BACKGROUND IMAGE ===== */
 .bg-image{
   position:fixed; inset:0;
-  background:url("Toji.jfif") center/cover no-repeat;
+  background:url("Toji1.jfif") center/cover no-repeat;
   filter:blur(2px) brightness(.6);
   z-index:-2;
 }
@@ -184,41 +183,6 @@ button{
 
 @keyframes blink{0%,50%,100%{opacity:1;}25%,75%{opacity:0;}}
 
-/* ===== DEV AURA ===== */
-.dev-card{
-  position: relative;
-  overflow: hidden;
-}
-
-.dev-card::before{
-  content:"";
-  position:absolute;
-  inset:-2px;
-  background:conic-gradient(
-    from 0deg,
-    transparent,
-    rgba(124,200,255,.4),
-    rgba(212,175,55,.6),
-    rgba(124,200,255,.4),
-    transparent
-  );
-  animation: auraRotate 6s linear infinite;
-  z-index:-1;
-}
-
-.dev-card::after{
-  content:"";
-  position:absolute;
-  inset:2px;
-  background: var(--gray-glass);
-  border-radius:22px;
-  z-index:-1;
-}
-
-@keyframes auraRotate{
-  from{transform:rotate(0deg);}
-  to{transform:rotate(360deg);}
-}
 button:hover{
   animation: powerPulse .6s infinite alternate;
   box-shadow: 0 0 25px rgba(212,175,55,.9);
@@ -257,57 +221,6 @@ button:hover{
   75%{transform:translate(5px,0);}
   100%{transform:translate(0,0);}
 }
-/* ===== SMOKE EFFECT ===== */
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  background:
-    radial-gradient(circle at 20% 30%, rgba(124,200,255,.08), transparent 40%),
-    radial-gradient(circle at 80% 70%, rgba(212,175,55,.08), transparent 40%);
-  animation: smokeMove 20s linear infinite;
-  pointer-events:none;
-  z-index:-1;
-}
-
-@keyframes smokeMove{
-  0%{transform:translate(0,0);}
-  50%{transform:translate(-40px, -60px);}
-  100%{transform:translate(0,0);}
-}
-.eyes{
-  position:fixed;
-  inset:0;
-  background:
-    radial-gradient(circle at 30% 40%, rgba(124,200,255,.15) 0 6px, transparent 7px),
-    radial-gradient(circle at 70% 60%, rgba(124,200,255,.15) 0 6px, transparent 7px);
-  animation: eyesBlink 6s infinite;
-  pointer-events:none;
-  z-index:-1;
-}
-
-@keyframes eyesBlink{
-  0%,90%,100%{opacity:.15;}
-  92%{opacity:0;}
-}
-*{
-  cursor: url("https://cur.cursors-4u.net/symbols/sym-1/sym46.cur"), auto;
-}
-.title{
-  animation: finalGlow 4s infinite alternate;
-}
-
-@keyframes finalGlow{
-  from{
-    text-shadow:0 0 15px rgba(124,200,255,.5);
-  }
-  to{
-    text-shadow:
-      0 0 40px rgba(124,200,255,1),
-      0 0 80px rgba(212,175,55,.6);
-  }
-}
-
 
 </style>
 
@@ -316,8 +229,6 @@ body::before{
 <body>
 
 <div id="cinematic">
-  <audio id="entrySound" src="https://assets.mixkit.co/sfx/preview/mixkit-dark-ambient-1138.mp3"></audio>
-
   <h1>MOON</h1>
   <p>⚜️ النظام يولد… ⚙️ المطوّر يحكم</p>
 </div>
@@ -384,14 +295,7 @@ function showPower(){
   document.body.classList.add("shake");
   setTimeout(()=>document.body.classList.remove("shake"),300);
 }
-window.addEventListener("click",()=>{
-  const s=document.getElementById("entrySound");
-  s.volume=0.3;
-  s.play();
-},{once:true});
 </script>
-<div class="eyes"></div>
-
 
 </body>
 </html>
