--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ body {
 صحيفة الاقليم
 </a>
 <section class="capital-card">
-  <div class="capital-image" style="background-image:url('./ati.jfif')"></div>
+  <div class="capital-image" style="background-image:url('./drift.jfif')"></div>
 
   <div class="capital-overlay"></div>
 
