--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@ body {
         <a href="#rotab" class="menu-item">الرتب الملكية</a>
         <a href="#do9" class="menu-item">الدوقات</a>
         <a href="./na9aba4.html" class="menu-item">النقابات</a>
+        <a href="./vip.html" class="menu-item">نخبة الاقليم</a>
         <a href="./developer.html" class="menu-item">المطوّر الأعلى</a>
     </div>
 </nav>
