--- a/vip.html
+++ b/vip.html
@@ -503,7 +503,7 @@ body {
       <div class="elite-overlay"></div>
       <div class="elite-info">
         <span class="elite-rank">فايوليت  </span>
-        <h2 class="elite-name">الأدميرالة 1 السابقة لدريفت </h2>
+        <h2 class="elite-name"> دريفت I ادمرالة السابقة  </h2>
         <p class="elite-desc">
 ناشرة رهيبة من احد الاسباب في الاعلان على دريفت        </p>
       </div>
@@ -517,7 +517,7 @@ body {
       <div class="elite-overlay"></div>
       <div class="elite-info">
         <span class="elite-rank">ساكاموتو  </span>
-        <h2 class="elite-name">ادميرال دريفت 2 السابق</h2>
+        <h2 class="elite-name">   دريفت II ادمرال السابق</h2>
         <p class="elite-desc">
 ناشر فروع رهيب و اداري قوي من احد الاسباب في تطور فروع دريفت
 </p>
@@ -532,7 +532,7 @@ body {
       <div class="elite-overlay"></div>
       <div class="elite-info">
         <span class="elite-rank">ميناتو </span>
-        <h2 class="elite-name">ادميرال الثالث السابق ل دريفت </h2>
+        <h2 class="elite-name">    دريفت IIIادمرال السابق </h2>
         <p class="elite-desc">
 ناشر و اداري قوي معلم رهيب و احد الاسباب في ظهور جيل قوي في دريفت من ناحية النشر        </p>
       </div>
@@ -544,7 +544,7 @@ body {
       <div class="elite-overlay"></div>
       <div class="elite-info">
         <span class="elite-rank">تانجيرو  </span>
-        <h2 class="elite-name"> 🔰  الأدميرال 1 ل تاكومي </h2>
+        <h2 class="elite-name">  تاكومي🔰 I ادمرال السابق    </h2>
         <p class="elite-desc">
 ناشر رهيب استطاع في يومين يوصل تاكومي ل 100 عضو و تفاعل 10k وحده بدون مشرفين و احد الاسباب في تطور تاكومي      </p>
       </div>
