--- a/vip.html
+++ b/vip.html
@@ -546,7 +546,7 @@ body {
         <span class="elite-rank">تانجيرو  </span>
         <h2 class="elite-name">  تاكومي🔰 I ادمرال السابق    </h2>
         <p class="elite-desc">
-ناشر رهيب استطاع في يومين يوصل تاكومي ل 100 عضو و تفاعل 10k وحده بدون مشرفين و احد الاسباب في تطور تاكومي      </p>
+ناشر رهيب استطاع في يومين يوصل تاكومي ل 100 عضو و تفاعل 10 ك وحده بدون مشرفين و احد الاسباب في تطور تاكومي      </p>
       </div>
     </article>
 
