--- a/index.html
+++ b/index.html
@@ -634,7 +634,28 @@ body {
             </button>
         </div>
     </article>
+     <article class="legend-card">
+        <div class="card-bg-img" style="background-image:url('./gan.jfif')"></div>
+        <div class="card-overlay"></div>
+        <div class="corner-rank">LEGEND</div>
 
+        <div class="card-content">
+            <h1 class="role">  مستشار ملك </h1>
+            <h2 class="name">جيمس لي</h2>
+
+            <div class="tags">
+                <span class="tag">ناشر  </span>
+                <span class="tag">اداري  </span>
+            </div>
+
+            <div class="achievements-list">
+من الأشخاص الحديثين في عالم النقابات اللي ابرز نفسه في فترة وجيزة و من افضل الرتب ادارة في الاقليم            </div>
+
+            <button class="like-btn" onclick="toggleLike(this,'jums')">
+                ❤️ <span class="count">0</span>
+            </button>
+        </div>
+    </article>
     
 
     
