--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ body {
     <h1>إقليم قمر</h1>
     <p style="opacity:0.7; letter-spacing:2px ;color: #f8cf00;">WELCOME TO MOON</p>
 </header>
-<a href="https://chat.whatsapp.com/CDUMJp4Jgyo6ElK2dQQES1?mode=gi_t" class="floating-kingdom">
+<a href="https://chat.whatsapp.com/DKbElXzZEFNKq4hZsELnza?mode=gi_t" class="floating-kingdom">
 صحيفة الاقليم
 </a>
 <section class="capital-card">
@@ -689,13 +689,13 @@ body {
      
 
      <article class="legend-card">
-        <div class="card-bg-img" style="background-image:url('./jims.jfif')"></div>
+        <div class="card-bg-img" style="background-image:url('./ati.jfif')"></div>
         <div class="card-overlay"></div>
         <div class="corner-rank">LEGEND</div>
 
         <div class="card-content">
-            <h1 class="role"> دوق </h1>
-            <h2 class="name">جيمس لي</h2>
+            <h1 class="role"> دوقة </h1>
+            <h2 class="name"> اثــي</h2>
 
             <div class="tags">
                 <span class="tag">ناشر  </span>
