--- a/na9aba4.html
+++ b/na9aba4.html
@@ -260,8 +260,8 @@ body {
         <h3>فـيـنـلانـد</h3>
         <span class="icon">🍁</span>
     </div>
-    <div class="card" style="--bg:url('./ati.jfif')">
-        <span class="rank">اثــي</span>
+    <div class="card" style="--bg:url('./shaghr12.jfif')">
+        <span class="rank">شـاغـر</span>
         <h3>دريـفـت</h3>
         <span class="icon">🎻</span>
     </div>
