--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ body {
         <div class="corner-rank">LEGEND</div>
 
         <div class="card-content">
-            <h1 class="role"> ملك</h1>
+            <h1 class="role"> مــلــك</h1>
             <h2 class="name">دانيال</h2>
 
             <div class="tags">
@@ -641,7 +641,7 @@ body {
 
         <div class="card-content">
             <h1 class="role">  مستشار ملك </h1>
-            <h2 class="name">جيمس لي</h2>
+            <h2 class="name"> غان</h2>
 
             <div class="tags">
                 <span class="tag">ناشر  </span>
@@ -664,6 +664,7 @@ body {
              الدوقات</h2>
 
           <article class="legend-card">
+            <a href="livai.html">
         <div class="card-bg-img" style="background-image:url('./livai\,jfif.jpeg')"></div>
         <div class="card-overlay"></div>
         <div class="corner-rank">LEGEND</div>
@@ -684,11 +685,13 @@ body {
                 ❤️ <span class="count">0</span>
             </button>
         </div>
+        </a>
     </article>
 
      
 
      <article class="legend-card">
+        <a href="iti.html">
         <div class="card-bg-img" style="background-image:url('./ati.jfif')"></div>
         <div class="card-overlay"></div>
         <div class="corner-rank">LEGEND</div>
@@ -709,6 +712,7 @@ body {
                 ❤️ <span class="count">0</span>
             </button>
         </div>
+        </a>
     </article>
    
 </section>
