--- a/livai.html
+++ b/livai.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>نقابات قمر</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>نقابات ليفاي</title>
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;900&display=swap');
@@ -235,56 +235,28 @@ body {
 
 </style>
 </head>
-
 <body>
-<nav class="nav-container">
+    <nav class="nav-container">
     <div style="font-weight:900;">MOON 🌙</div>
     <a href="index.html" class="menu-item">رجوع إلى المملكة</a>
 </nav>
 
-<h2 class="main-title">نقابات قمر</h2>
+<h2 class="main-title">نقابات ليفاي</h2>
 
 <div class="cards">
-    <div class="card" style="--bg:url('./yami2.jfif')">
-        <span class="rank">يــامــي</span>
-        <h3>بــلاك</h3>
-        <span class="icon">⚫</span>
-    </div>
-    <div class="card" style="--bg:url('./milina.jfif')">
-        <span class="rank">مـيـلـيـنـا</span>
-        <h3>تـاكـومـي</h3>
-        <span class="icon">🔰</span>
-    </div>
-    <div class="card" style="--bg:url('./lowid.jfif')">
-        <span class="rank">لــويــد</span>
-        <h3>فـيـنـلانـد</h3>
-        <span class="icon">🍁</span>
-    </div>
-    <div class="card" style="--bg:url('./omni.jfif')">
-        <span class="rank">اومني</span>
-        <h3>دريـفـت</h3>
-        <span class="icon">🎻</span>
-    </div>
     <div class="card" style="--bg:url('./osaragi.jfif')">
     <span class="rank" >      اوسـاراغـي   </span>
     <h3> سـونـارا  </h3>
     <span class="icon">♦️</span>
 </div>
-<div class="card" style="--bg:url('./rin1.jfif')">
-    <span class="rank" >      رين   </span>
-    <h3> سنو  </h3>
-    <span class="icon">☃️</span>
+<div class="card" style="--bg:url('./lowid.jfif')">
+        <span class="rank">لــويــد</span>
+        <h3>فـيـنـلانـد</h3>
+        <span class="icon">🍁</span>
+    </div>
 </div>
-</div>
 
-<div class="falling-icons" id="fallingIcons"></div>
-
-<a href="#" class="developer-badge">
-    <span class="text">𝑲𝒂𝒊𝒓𝒐 – 𝑻𝒐𝒋𝒊 ⛧</span>
-    <span class="code-icon">&lt;/&gt;</span>
-</a>
-
-<script>
+    <script>
 /* ===== Card click shake ===== */
 document.querySelectorAll(".card").forEach(card => {
     card.addEventListener("click", () => {
@@ -327,6 +299,5 @@ document.querySelectorAll(".card").forEach(card => {
 });
 
 </script>
-
 </body>
 </html>
