--- a/index.html
+++ b/index.html
@@ -634,6 +634,28 @@ body {
             </button>
         </div>
     </article>
+    <article class="legend-card">
+        <div class="card-bg-img" style="background-image:url('./sabo.jfif')"></div>
+        <div class="card-overlay"></div>
+        <div class="corner-rank">LEGEND</div>
+
+        <div class="card-content">
+            <h1 class="role">  وزيـر الـمـلك  </h1>
+            <h2 class="name"> سابو</h2>
+
+            <div class="tags">
+                <span class="tag">خبير  </span>
+                <span class="tag">اداري  </span>
+            </div>
+
+            <div class="achievements-list">
+من اقوى الاداريين في المملكة و كان من اقوى الدوقات في ماستر        </div>
+
+            <button class="like-btn" onclick="toggleLike(this,'jums')">
+                ❤️ <span class="count">0</span>
+            </button>
+        </div>
+    </article>
      <article class="legend-card">
         <div class="card-bg-img" style="background-image:url('./gan.jfif')"></div>
         <div class="card-overlay"></div>
