--- a/na9aba4.html
+++ b/na9aba4.html
@@ -274,6 +274,12 @@ body {
     <span class="rank" >      رين   </span>
     <h3> سنو  </h3>
     <span class="icon">☃️</span>
+   
+</div>
+ <div class="card" style="--bg:url('./obito.jfif')">
+    <span class="rank" >     اوبيتو    </span>
+    <h3> سـتـارك  </h3>
+    <span class="icon"> 🐺</span>
 </div>
 </div>
 
@@ -307,7 +313,7 @@ document.addEventListener("mousemove", e => {
 document.querySelectorAll('.card').forEach(card => card.classList.add('show'));
 
 /* ===== Falling icons ===== */
-const icons = ["♦️","🍁","🔰","⚫","🎻","☃️"];
+const icons = ["♦️","🐺","🍁","🔰","⚫","🎻","☃️"];
 const container = document.getElementById("fallingIcons");
 const count = 40;
 
