--- a/na9aba4.html
+++ b/na9aba4.html
@@ -260,8 +260,8 @@ body {
         <h3>فـيـنـلانـد</h3>
         <span class="icon">🍁</span>
     </div>
-    <div class="card" style="--bg:url('./omni.jfif')">
-        <span class="rank">اومني</span>
+    <div class="card" style="--bg:url('./zawfan.jfif')">
+        <span class="rank">زاوفان</span>
         <h3>دريـفـت</h3>
         <span class="icon">🎻</span>
     </div>
@@ -280,6 +280,11 @@ body {
     <span class="rank" >     اوبيتو    </span>
     <h3> سـتـارك  </h3>
     <span class="icon"> 🐺</span>
+</div>
+<div class="card" style="--bg:url('./itachi1.jfif')">
+    <span class="rank" >      ايتاشي   </span>
+    <h3> وانو  </h3>
+    <span class="icon">🎋</span>
 </div>
 </div>
 
@@ -314,7 +319,7 @@ document.querySelectorAll('.card').forEach(card => card.classList.add('show'));
 
 /* ===== Falling icons ===== */
 const icons = ["♦️","🐺","🍁","🔰","⚫","🎻","☃️"];
-const container = document.getElementById("fallingIcons");
+const container = document.getElementById("fallingIcons");v
 const count = 40;
 
 for(let i=0;i<count;i++){
