--- a/na9aba4.html
+++ b/na9aba4.html
@@ -261,7 +261,7 @@ body {
         <span class="icon">🍁</span>
     </div>
     <div class="card" style="--bg:url('./zawfan.jfif')">
-        <span class="rank">زاوفان</span>
+        <span class="rank">زوفان</span>
         <h3>دريـفـت</h3>
         <span class="icon">🎻</span>
     </div>
